fix: remove overflow x from body

--- a/style.css
+++ b/style.css
@@ -645,6 +645,9 @@ button > span {
     padding: 20px;
   }
 
+  header {
+    overflow-x: hidden;
+  }
   header > div {
     justify-content: space-between;
     padding: 0 0px;
